# adv_comp

./: .gitignore  CMakeLists.txt  homeworks.h  lectures.h  main.cpp  phases.h  practice.h
homeworks/: hw1.1_pth_fact.cpp  hw2.1_palindrome.cpp  hw2.2_power_sum.cpp  hw3.1_sll.cpp  hw3.3_coord_combs.cpp  hw4_orderbook.cpp  hw5_tree_valid.cpp  hw6_singleton.cpp
lectures/: exchange.h  lec_1.cpp  lec_2.cpp  lec_2_order.cpp  lec_3.cpp  lec_3_orderbook.cpp  lec_4.cpp  lec_4_curiously_recurring.cpp  lec_4_vector.cpp  lec_5.cpp  lec_5_order.cpp  lec_5_reversed_set.cpp  lec_6.cpp  lec_6_thread.cpp  lec_7.cpp  lec_7_observer.cpp
phases/: phase1.cpp  phase3.cpp  phase4.cpp
practice/: factoring.cpp  merge_sort.cpp  selection_sort.cpp
