cmake_minimum_required(VERSION 3.21)
project(adv_comp)

set(CMAKE_CXX_STANDARD 20)

add_executable(adv_comp main.cpp lectures/lec_1.cpp lectures.h homeworks/hw1.1_pth_fact.cpp homeworks.h phases/phase1.cpp phases.h lectures/lec_2.cpp lectures/lec_2_order.cpp practice/factoring.cpp homeworks/hw2.2_power_sum.cpp homeworks/hw2.1_palindrome.cpp practice/selection_sort.cpp lectures/lec_3.cpp lectures/lec_3_orderbook.cpp lectures/exchange.h homeworks/hw3.1_sll.cpp homeworks/hw3.3_coord_combs.cpp phases/phase3.cpp practice/merge_sort.cpp practice.h lectures/lec_4.cpp lectures/lec_4_vector.cpp lectures/lec_4_curiously_recurring.cpp homeworks/hw4_orderbook.cpp phases/phase4.cpp lectures/lec_5.cpp lectures/lec_5_reversed_set.cpp lectures/lec_5_order.cpp homeworks/hw5_tree_valid.cpp lectures/lec_6.cpp lectures/lec_6_thread.cpp lectures/lec_7.cpp lectures/lec_7_observer.cpp homeworks/hw6_singleton.cpp)
